--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: go
 
+sudo: false
+
+go:
+ - 1.5
+ - 1.6
+ - 1.7
+ - 1.8
+ - tip
+
 script:
  - make
-
-notifications:
-  recipient:
-   - alessandro@ghedini.me
-  email:
-    on_success: change
-    on_failure: always
