--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ language: go
 sudo: false
 
 go:
- - "1.7"
- - "1.8"
- - "1.9"
- - "1.10"
+ - "1.11"
  - "tip"
 
+env:
+ - GO111MODULE=on
+
 script:
- - make
+ - go build github.com/ghedo/moodns/cmd/moodns
+ - go build github.com/ghedo/moodns/cmd/moodns-resolve
